# G-DriveXp-nautilus-ext

./: Cargo.toml  README.md  build.rs
src/: ffi.rs  ipc_client.rs  lib.rs  menu_provider.rs  provider.rs
