[package]
name = "gdrivexp-nautilus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Serialización IPC
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Async runtime (solo para cliente IPC)
tokio = { version = "1.44", features = ["rt", "io-util", "net"] }

# GLib / GObject types
glib-sys = "0.20"
gobject-sys = "0.20"
gio-sys = "0.20"

# Utilidades
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
